# lines-tally

./: Cargo.toml  README.md
src/: count_lines.rs  main.rs  ui.rs
