[package]
name = "lines-tally"
version = "0.1.0"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE"
]
homepage = "https://github.com/27Saumya/lines-tally"
description = "Simple command line tool to get the number of lines of code within a directory"
repository = "https://github.com/27Saumya/lines-tally"
keywords = [
	"cli",
	"code",
    "command-line"
]
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
walkdir = "2.4.0"
ignore = "0.4.20"
dialoguer = "0.11.0"
